--- a/style.css
+++ b/style.css
@@ -3,3 +3,24 @@ body {
   height: 100%;
   margin: 0;
 }
+header{
+  text-align: center;
+}
+nav a {
+  padding: 10px;
+  background-color: red;
+}
+figure {
+text-align: center;
+}
+#featured-property p{
+width: 800px;
+text-align: center;
+margin: 0 auto;
+}
+#details div{
+float: left;
+width: 25%;
+background-color: aqua;
+text-align: center;
+}
